<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PTT Advisor</string>
    <string name="imageview_contentDescription">center image</string>
    <string name="contentDescription_previous_button">contentDescription_previous_button</string>
    <string name="contentDescription_next_button">contentDescription_next_button</string>
    <string name="contentDescription_farthest_button">contentDescription_farthest_button</string>
    <string name="contentDescription_restart_button">contentDescription_restart_button</string>
    <string name="contentDescription_summary_button">contentDescription_summary_button</string>
    <string name="helpButtonText">\?</string>
    <string name="infoButtonText">i</string>
    <string name="footnotesButtonText">Footnotes</string>
    <string name="eula">Bacon ipsum dolor sit amet filet mignon shoulder leberkas chicken t-bone tenderloin shank drumstick strip steak bacon shankle ball tip chuck capicola. Andouille pork loin brisket sirloin. Short loin t-bone meatball ribeye turducken. Meatloaf salami pork, prosciutto jerky pig venison doner pork belly shoulder turkey biltong. Spare ribs jerky pork belly brisket beef meatball.

Ham hock boudin bresaola tail shoulder meatloaf, rump shankle kielbasa turducken. Doner turducken cow biltong corned beef, shoulder capicola. Andouille filet mignon frankfurter pork loin corned beef shank t-bone drumstick pig pork chop ham pancetta ham hock. Chuck turkey hamburger tenderloin, frankfurter swine strip steak tail drumstick. Tenderloin venison shankle ribeye pork pancetta capicola rump boudin fatback filet mignon tail bacon bresaola shoulder.

Tongue doner tenderloin short ribs pork pig bacon andouille beef pastrami t-bone boudin. Swine strip steak flank short ribs venison ham hock fatback. Leberkas pork loin cow boudin strip steak sausage turducken flank. Fatback shank jowl, strip steak bresaola flank capicola biltong tri-tip. Fatback ground round ribeye salami meatloaf chuck brisket short loin sirloin pig pastrami. Ball tip prosciutto chicken turducken leberkas tri-tip rump pastrami. Chicken biltong turducken flank, tenderloin short loin ground round bacon pork chuck fatback bresaola salami pancetta.

Leberkas bacon prosciutto beef ribs sausage strip steak tri-tip andouille chicken meatball ham fatback hamburger jerky ground round. Pork chop tenderloin pork belly turkey pancetta, spare ribs short loin strip steak salami meatloaf pork venison. T-bone spare ribs sausage, bresaola sirloin turkey brisket hamburger flank. Tongue pastrami tenderloin sausage. Strip steak pork belly doner leberkas kielbasa spare ribs chuck beef ribs biltong beef turducken meatball. Tongue ribeye venison, andouille brisket kielbasa jerky pancetta pig pork belly doner frankfurter.

Chicken capicola prosciutto tongue turducken frankfurter t-bone fatback drumstick jerky pork loin. Beef drumstick rump hamburger, beef ribs short ribs corned beef jowl bacon. Bresaola t-bone pork loin beef sirloin, ball tip rump pancetta tongue jerky leberkas capicola fatback shoulder. Tongue boudin beef, turducken corned beef jerky sirloin shank turkey shankle ham pork chop frankfurter ground round. Rump meatball salami drumstick, beef flank meatloaf short loin frankfurter tail. Bacon boudin fatback meatloaf hamburger. Hamburger capicola boudin chuck frankfurter andouille.</string>
    <string name="updates">This would be a list of updates/changes in this version, if any.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_history_view">HistoryView</string>
    <string name="title_activity_help_view">Help</string>
    <string name="title_activity_info_view">About</string>
    <string name="title_activity_footnotes_view">FootnotesView</string>

</resources>